# Non-Gregorian-Calendar

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/infini-gram/: count_summary.jsonl  heisei.jsonl  infini-gram.jsonl  meiji.jsonl  reiwa.jsonl  showa.jsonl  taisho.jsonl
src/: arithmetic.py  birthyear_recall.py  conversion.py  main.py
src/birth_year_recall/: plot_birth_year_recall.py  recall_deepseekv3_en.py  recall_deepseekv3_ja.py  recall_gpt4o_en.py  recall_gpt4o_ja.py  recall_hf_models_en.py  recall_hf_models_ja.py
src/calendar_conversion/: conversion_deepseekv3_en.py  conversion_deepseekv3_main.py  conversion_gpt4o_main.py
src/discussion/: plot_corpus_estimated_analysis_birth_year_recall.py  plot_corpus_estimated_analysis_japanese_calendar_arithmetic.py  plot_typical_error_birth_year_recall.py  plot_typical_error_japanese_calendar_arithmetic.py
src/japanese_calendar_arithmetic/: arithmeric_deepseekv3_en.py  arithmetic_gpt4o_en.py  arithmetic_gpt4o_ja.py  arithmetic_hf_models_en.py  plot_japanese_calendar_arithmetic.py
