[project]
name = "numeric_Japan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic<2.0", 
    "setuptools>=42",
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.3",
    "matplotlib>=3.7.1",
    "tabulate>=0.8.9",
    "pandas>=1.5.3",
    "rich>=13.9.4",
    "scikit-learn>=1.5.1",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "torch>=2.3.0",
    "tqdm>=4.65.0",
    "transformers>=4.43.1",
    "accelerate>=0.29.3",
    "bokeh>=3.1.1",
    "boltons>=23.0.0",
    "colorcet>=3.0.1",
    "inflect>=6.0.4",
    "natsort>=8.3.1",
    "Pint>=0.21",
    "quantulum3>=0.9.0",
    "six>=1.16.0",
    "stringcase>=1.2.0",
    "tokenizers>=0.19.1",
    "japanize-matplotlib>=1.1.3",
    "umap-learn>=0.5.7",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "pynndescent>=0.5.13",
    "plotly>=5.20.0",
]
[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
    "flash-attn>=2.6.3",
]
[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 88
target-version = "py311"
[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",  # Zip-without-explicit-strict
    "E501",  # Line too long, handled by black
    "F401",  # module imported but unused
    "F403",  # Unable to detect undefined names
    "N803",  # Argument name defined as non-lowercase
    "N806",  # Variable in function defined as non-lowercase
    "N812",  # Lowercase imported as non-lowercase
    "N999",  # Invalid module name
    "UP035",  # Checks for uses of deprecated imports based on the minimum supported Python version.
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements in function
    "PLR2004",  # Magic value used in comparison"
]
[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true  # Settings for Python 3.8 compatibility
[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true