[project]
name = "Wareki"
version = "0.1.0"
description = "packages for wareki experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic<2.0", 
    "setuptools>=42",
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.3",
    "matplotlib>=3.7.1",
    "tabulate>=0.8.9",
    "pandas>=1.5.3",
    "rich>=13.9.4",
    "scikit-learn>=1.5.1",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "torch>=2.3.0",
    "tqdm>=4.65.0",
    "transformers>=4.43.1",
    "accelerate>=0.29.3",
    "tokenizers>=0.19.1",
]